# Papertion

./: .gitignore  README.md  pyproject.toml
papertion/: doi.py  item.py  main.py  notion.py
tests/: info_doi.py  test_doi.py
